# nest-desktop

./: .dockerignore  .env.development  .eslintrc.cjs  .eslintrc.js  .gitignore  .gitlab-ci.yml  .prettierrc  .prettierrc.js  .readthedocs.yaml  LICENSE  README.md  SECURITY.md  codemeta.json  docker-compose.yml  electron-builder.yml  electron.vite.config.cts  env.d.ts  eslint.config.js  eslint.config.mjs  index.html  nest-desktop.desktop  nest-desktop.metainfo.xml  package-lock.json  package.json  pyproject.toml  setup.py  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.mts  vite.config.ts  vitest.config.ts  vue.config.js
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ebrains-push.yml
.gitlab-ci-docker/: Dockerfile
docker/: Dockerfile  Dockerfile-builder  README.md  docker-compose.yml  entrypoint.sh  nginx-default.conf  setup-apps-dev.sh
docker/docker-compose/: docker-compose.yml  setup-apps-dev.sh
docker/nest-desktop/: Dockerfile  entrypoint.sh
docker/nest-desktop-build/: Dockerfile  entrypoint.sh
docker/nest-desktop-nginx/: Dockerfile  Dockerfile-builder  Dockerfile-pip
docker/nest-server/: Dockerfile  entrypoint.sh
docker/nginx/: nginx.conf  site.conf
docker/simulators/: nest.sh  pynn.sh
docs/: Makefile  conf.py  contents.rst  environment.yaml  index.rst  live-demo.rst  requirements.txt
docs/_templates/: globaltoc.html  layout.html  localtoc.html
docs/about/: abstract.rst  citation.rst  events.rst  funding.rst  history.rst  index.rst  live-demo.rst  nuspic.rst  releases.rst
docs/deployer/: _deploy-docker-compose.rst  deploy-docker-compose-insite.rst  deploy-docker-compose-nrp.rst  deploy-docker-compose.rst  deploy-docker.rst  deploy-insite.rst  deploy-openshift.rst  deploy-openstack.rst  index.rst
docs/developer/: coding-conventions.rst  command-API.rst  continuous-integration.rst  development.rst  index.rst  interface-concept.rst  preparation.rst  production.rst  references.rst  semantic-version.rst  user-doc.rst
docs/lecturer/: course-design.rst  course-protocol.rst  didactic-concept.rst  didactic-strategy.rst  first-steps.rst  index.rst
docs/reference/: index.rst  structural-overview.rst
docs/services/: index.rst  service-ebrains.rst
docs/templates/: content-structure.html
docs/troubleshootings/: activity.rst  ebrains.rst  error.rst  index.rst  model.rst  nest-simulator.rst  network.rst  project.rst  raw.rst  simulation.rst
docs/user/: activity-graph.rst  index.rst  nest-models.rst  setup.rst  troubleshooting.rst  usage-insite.rst  usage.rst  use-ebrains.rst
electron/: main.ts  preload.ts
nest_desktop/: __init__.py  app.py
public/: config.json  index.html  manifest.json
public/config/: app.json
scripts/: nest-desktop-launch
singularity/: dev-electron-builder.def  dev-node-16-alpine.def  doc-sphinx.def  nest-desktop-app.def  nest-desktop-dev.def  nest-desktop-prod.def  prod-snapcraft.def  test-ubuntu-20.04.def  ubuntu-nest-desktop-dev.def
src/: App.vue  background.ts  main.ts  nest-server.ts  nest.ts  registerServiceWorker.ts  shims-vue.d.ts  types.ts
src/components/: About.vue  AppDetails.vue  AppInfo.vue  BackendSettings.vue  CodeMirror.vue  HelloWorld.vue  NESTDesktopVersionInfo.vue  Navigation.vue  NavigationTemporary.vue  StoreList.vue
src/core/: app.ts  appView.ts  code.ts  config.ts  database.ts  index.ts  parameter.ts  parameterRandom.ts
src/environments/: environment.prod.ts  environment.ts
src/helpers/: backend.ts  colorSchemes.ts  combineURLs.ts  config.ts  database.ts  download.ts  numeric.ts  parameter.ts  randomParameter.ts  routes.ts  theme.ts  types.ts  valueGenerator.ts
src/layouts/: AppLayout.vue
src/mixins/: update.ts
src/nest/: index.ts
src/plugins/: codemirror.ts  configs.ts  index.ts  main.scss  vuetify.ts
src/router/: index.ts  modelRoute.ts  projectRoute.ts
src/simulators/: index.ts
src/store/: appSessionStore.ts  appStore.ts  defineBackendStore.ts  index.ts  modelStore.ts  navStore.ts  projectStore.ts
src/stores/: appSessionStore.ts  appStore.ts  defineBackendStore.ts  defineViewStore.ts  index.ts  navStore.ts  simulatorStore.ts
src/types/: connectionTypes.ts  (+14 more)
(+2137 files in other folders)
